--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "bcryptjs": "^2.4.3",
         "cookie-parser": "^1.4.6",
         "dotenv": "^16.0.0",
+        "ejs": "^3.1.6",
         "express": "^4.17.3",
         "hbs": "^4.2.0",
         "jsonwebtoken": "^8.5.1",
